# specimen-labels-py

./: .gitignore  CHANGELOG.md  Containerfile  IMPLEMENTATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: demo.tape
src/wols/: __init__.py  constants.py  environment.py  exceptions.py  generation.py  migration.py  type_aliases.py
src/wols/cli/: __init__.py  app.py
src/wols/core/: __init__.py  create.py  parse.py  serialize.py  validate.py
src/wols/crypto/: __init__.py  decrypt.py  encrypt.py
src/wols/models/: __init__.py  enums.py  specimen.py  validation.py
src/wols/qr/: __init__.py  generate.py  scan.py
tests/: conftest.py
tests/integration/: __init__.py  test_roundtrip.py
tests/unit/: __init__.py  test_cli.py  test_convenience.py  test_create.py  test_crypto.py  test_environment.py  test_generation.py  test_growth_stages.py  test_id_validation.py  test_meta.py  test_migration.py  test_models.py  test_parse.py  test_qr.py  test_serialize.py  test_type_aliases.py  test_validate.py
