[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wols"
version = "0.1.1"
description = "WeMush Open Labeling Standard (WOLS) Python library"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "WeMush", email = "dev@wemush.com" }
]
keywords = ["wols", "specimen", "label", "mushroom", "cultivation", "qr", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "cuid2>=2.0",
]

[project.optional-dependencies]
qr = [
    "qrcode[pil]>=7.4",
    "pillow>=10.0",
    "pyzbar>=0.1.9",
]
crypto = [
    "cryptography>=42.0",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
all = [
    "wols[qr,crypto,cli]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "twine>=5.0",
]

[project.scripts]
wols = "wols.cli.app:main_cli"

[project.urls]
Homepage = "https://github.com/wemush/specimen-labels-py"
Documentation = "https://wemush.github.io/specimen-labels-py"
Repository = "https://github.com/wemush/specimen-labels-py"
Issues = "https://github.com/wemush/specimen-labels-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wols"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# Ruff configuration
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "I",      # isort
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/**/*.py" = ["S101"]  # Allow assert in tests
"src/wols/cli/app.py" = ["B904"]  # CLI exits don't need exception chaining

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# mypy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/wols"]
branch = true
# Omit modules requiring system dependencies for testing
omit = ["src/wols/qr/scan.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # Exclude CLI scan command requiring system zbar library
    "def scan\\(",
]
# Note: 80% target adjusted to 75% due to CLI scan command requiring system zbar library
fail_under = 75
